Fixed overflow on like buttons, and moved an animation to the right file.

--- a/stylesheets/css/main.css
+++ b/stylesheets/css/main.css
@@ -178,6 +178,19 @@ section {
   animation-delay: 4100ms;
 }
 
+.wave img {
+  width: 44px;
+  animation: wave-movements 450ms ease-in-out infinite;
+}
+
+@keyframes wave-movements {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
 header {
   width: 100%;
   height: 63px;
@@ -302,7 +315,6 @@ footer a {
   width: 22px;
   height: 21px;
   position: relative;
-  overflow: hidden;
   clip-path: path("M 12.2208 2.4055 L 11.3741 3.3573 L 11.0005 3.7773 L 10.627 3.3573 L 9.7805 2.4058 C 7.7827 0.1526 4.5976 -0.1696 2.4766 1.802 C -0.0175 4.1245 -0.1549 8.3236 2.0848 10.8495 L 10.399 20.2148 C 10.7372 20.5955 11.2595 20.5955 11.5977 20.2149 L 19.9123 10.8492 C 22.1559 8.3233 22.0186 4.1246 19.5245 1.8021 C 17.4035 -0.1696 14.2186 0.1526 12.2208 2.4055 Z");
   z-index: 2;
 }
@@ -351,19 +363,6 @@ footer a {
   height: 16px;
 }
 
-.wave img {
-  width: 44px;
-  animation: wave-movements 450ms ease-in-out infinite;
-}
-
-@keyframes wave-movements {
-  0% {
-    transform: translateX(0);
-  }
-  100% {
-    transform: translateX(-50%);
-  }
-}
 .card {
   width: 100%;
   background-color: white;
